# ascon-verilog

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  cleaning.txt  compile_src.txt  expected_output_full.txt  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  transcript  vhdl_ls.toml  vsim.wlf  wlft44at0x
.github/workflow/: build-test.yml
.github/workflows/: build-deploy-docs.yml  build-test.yml  docker-image.yml
LIB/LIB_BENCH/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
LIB/LIB_RTL/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
SRC/BENCH/: adder_const_tb.vhd  ascon_top_level_tb.vhd  compteur_double_init_tb.vhd  compteur_simple_init_tb.vhd  diffusion_tb.vhd  fsm_init_tb.vhd  fsm_tb.vhd  mux_state_tb.vhd  permutation_final_tb.vhd  permutation_inter_tb.vhd  permutation_tb.vhd  sbox_tb.vhd  state_register_tb.vhd  substitution_layer_tb.vhd  xor_begin_tb.vhd  xor_end_tb.vhd
SRC/RTL/: adder_const.vhd  ascon_pack.vhd  ascon_top_level.vhd  compteur_simple_init.vhd  diffusion.vhd  fsm.vhd  fsm_init.vhd  mux_state.vhd  permutation.vhd  permutation_final.vhd  permutation_inter.vhd  register_w_en.vhd  sbox.vhd  state_register.vhd  state_register_w_en.vhd  substitution_layer.vhd  xor_begin.vhd  xor_end.vhd
docs/: requirements.txt
docs/source/: conf.py  index.rst  references.bib
docs/source/drawio/: ascon.drawio
docs/source/files/: ascon.rst  getting_started.rst  hdl_modules.rst  python_modules.rst  references.rst
docs/source/files/bench/: ascon.rst  (+6 more)
src/bench/: Makefile  ascon_utils.py  cocotb_utils.py  expected_output_full.txt
src/bench/add_layer/: add_layer_model.py  test_add_layer.py
src/bench/adder_const/: Makefile  test_adder_const.py
src/bench/addition_layer/: Makefile  addition_layer_model.py  test_addition_layer.py
src/bench/ascon/: Makefile  ascon_model.py  test_ascon.py
src/bench/cocotb/: Makefile  cocotb_utils.py
src/bench/diffusion_layer/: Makefile  diffusion_layer_model.py  test_diffusion_layer.py
src/bench/fsm/: Makefile  test_ascon_fsm.py
src/bench/permutation/: Makefile  permutation_model.py  test_permutation.py
src/bench/vunit/: gen_vhdl_ls_toml.py  test_ascon_modules.py
src/rtl/: ascon_pkg.sv  ascon_pkg.v
src/rtl/add_layer/: add_layer.sv  add_layer.v
src/rtl/adder_const/: adder_const.v
src/rtl/addition_layer/: addition_layer.sv
src/rtl/ascon/: ascon.sv
src/rtl/diffusion_layer/: diffusion_layer.sv  diffusion_layer.v
src/rtl/example/: adder.sv  counter.sv
src/rtl/fsm/: ascon_fsm.sv
src/rtl/permutation/: permutation.sv  permutation.v
src/rtl/substitution_layer/: sbox.sv  sbox.v  sub_layer.v  substitution_layer.sv  substitution_layer.v
src/rtl/systemverilog/: ascon_pkg.sv
src/rtl/vhdl/: ascon_pkg.vhd  pkg_ascon.vhd
src/rtl/xor/: xor_begin.sv  xor_begin.v  xor_end.sv  xor_end.v
tools/format/: vhdl_vsg_config.yaml
tools/vsg/: .vsg.yaml
(+80 files in other folders)
