[project]
name = "ascon-verilog"
version = "0.1.0"
dependencies = [
    "cocotb @ git+https://github.com/cocotb/cocotb.git@master",
    "pytest",
    "ruff",
    "tabulate",
    "vunit-hdl @ git+https://github.com/VUnit/vunit.git@master",
    "vsg",
]

[project.optional-dependencies]
doc = [
    "pydata_sphinx_theme",
    "sphinx",
    "sphinx_copybutton",
    "sphinxcontrib.bibtex",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    "oss-cad-suite",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D212",
    "INP001",
    "PLR0913",
    "PLR0915",
    "S101",
    "S311",
    "SLF001",
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --tb=short"
testpaths = ["src/bench/cocotb"]
